fix(Develop): floating music notes became hidden under footer

--- a/src/app/layout/Footer.css
+++ b/src/app/layout/Footer.css
@@ -3,6 +3,8 @@
     color: #ffeba7;
     padding: 30px 20px;
     direction: rtl; /* Set direction to right-to-left */
+    z-index: 5 !important;
+    position: relative;
   
   
   .footer-container {
